style.css
:root {
  /* Primary */
  --Red-400: hsl(0, 100%, 74%);
  --Green-400: hsl(154, 59%, 51%);
  /* Accent */
  --Purple-700: hsl(248, 32%, 49%);
  /* Neutral */
  --Gray-900: hsl(249, 10%, 26%);
  --Purple-350: hsl(246, 25%, 77%);
  --White: hsl(0, 0%, 100%);
  /* Font size */
  --font-size: 1rem;
  /* Font family */
  --font-family: "Poppins", sans-serif;
  /* Font weights */
  --fw-400: 400;
  --fw-500: 500;
  --fw-600: 600;
  --fw-700: 700;
}

/* 1. Use a more-intuitive box-sizing model */
*,
*::before,
*::after {
  box-sizing: border-box;
}

/* 2. Remove default margin */
*:not(dialog) {
  margin: 0;
}

/* 3. Enable keyword animations */
@media (prefers-reduced-motion: no-preference) {
  html {
    interpolate-size: allow-keywords;
  }
}

body {
  /* 4. Increase line-height */
  line-height: 1.5;
  /* 5. Improve text rendering */
  -webkit-font-smoothing: antialiased;
  color: var(--White);
  height: 100vh;
  font-family: var(--font-family);
  background-color: var(--Red-400);
  background-image: url(images/bg-intro-mobile.png);
}

/* 6. Improve media defaults */
img,
picture,
video,
canvas,
svg {
  display: block;
  max-width: 100%;
}

/* 7. Inherit fonts for form controls */
input,
button,
textarea,
select {
  font: inherit;
}

/* 8. Avoid text overflows */
p,
h1,
h2,
h3,
h4,
h5,
h6 {
  overflow-wrap: break-word;
}

/* 9. Improve line wrapping */
p {
  text-wrap: pretty;
}
h1,
h2,
h3,
h4,
h5,
h6 {
  text-wrap: balance;
}

/*
  10. Create a root stacking context
*/
#root,
#__next {
  isolation: isolate;
}

.attribution {
  font-size: 0.6875rem;
  text-align: center;
}

.attribution a {
  color: hsl(228, 45%, 44%);
}

.container {
  display: flex;
  flex-direction: column;
  text-align: center;
  font-size: var(--font-size);
  font-weight: normal;
  padding: 1.5rem 0;
}

.product-title {
  line-height: 1.25;
  font-weight: var(--fw-600);
  font-size: 1.75rem;
  margin-bottom: 1rem;
}

.product {
  margin-bottom: 0.5rem;
  text-align: center;
}

.promotion {
  background-color: var(--Purple-700);
  margin: 0.5rem 2rem;
  padding: 1rem 1rem;
  border-radius: 12px;
  box-shadow: 0 10px 12px rgb(0 0 0 / 0.5);
}

.free {
  font-weight: var(--fw-700);
}

.form {
  background-color: var(--White);
  margin: 0.5rem 2rem;
  display: flex;
  flex-direction: column;
  gap: 1rem;
  padding: 1rem;
  border-radius: 12px;
  align-items: space-evenly;
}

.input {
  padding: 0.5em;
  border: 1px solid gray;
  border-radius: 7px;
}

.button {
  color: var(--White);
  background-color: var(--Green-400);
  border: none;
  border-radius: 7px;
  padding: 1rem 1rem;
  text-transform: uppercase;
}

.agreement {
  color: var(--Gray-900);
  font-size: calc(var(--font-size) * 0.8);
}

.terms {
  color: var(--Red-400);
  font-weight: var(--fw-700);
}

